# bigbot_tutorial

./: CMakeLists.txt  README.md  package.xml
bigbot_base/: CMakeLists.txt  package.xml
bigbot_base/launch/: base_jackal.launch  map.launch  one_jackal.launch  two_jackal.launch
bigbot_base/rviz/: APF.rviz
bigbot_control/: CMakeLists.txt  package.xml
bigbot_control/config/: control.yaml
bigbot_control/launch/: control.launch
bigbot_description/: CMakeLists.txt  package.xml
bigbot_description/launch/: description.launch
bigbot_description/urdf/: jackal.gazebo  jackal_all.urdf.xacro  jackal_velodyne.urdf.xacro
bigbot_tutorial/: CMakeLists.txt  package.xml
bigbot_tutorial/include/: tic_toc.h
bigbot_tutorial/launch/: bigbot_jackal_gazebo.launch  bigbot_jackal_gazebo_t1.launch  bigbot_jackal_gazebo_t2.launch  bigbot_jackal_gazebo_t3.launch  bigbot_one_jackal_gazebo.launch  bigbot_rosbot_gazebo.launch  bigbot_ugv_uav.launch  one_robot.launch  real_A.launch  real_B.launch  real_C.launch  rosbot_gazebo.launch
bigbot_tutorial/models/bricks/: model.sdf
bigbot_tutorial/models/long_wall_white/: model.config  model.sdf
bigbot_tutorial/models/short_wall_white/: model.config  model.sdf
bigbot_tutorial/rviz/: multi_robot.rviz
bigbot_tutorial/scripts/: formation_ugv.py  gen_ref_traj.py  mpc_basic.py
bigbot_tutorial/src/: formationControl.cpp  mpc_basic.cpp  turningControl.cpp
bigbot_tutorial/worlds/: form_melodic.world  form_melodic_no_obs_defense.world  form_melodic_obs.world  form_melodic_obs_defense.world  formation  formation.world  formation.worlds  formation_w_obs.world  formation_w_obs_noetic.world  formation_wo_obs.world  formation_wo_obs_noetic.world  test.world
bigbot_tutorial/worlds/models/cylinder/: model.sdf
jackal_control/config/: control.yaml
jackal_control/launch/: control.launch
jackal_description/launch/: description.launch
jackal_description/urdf/: jackal.gazebo  jackal.urdf.xacro  jackal_camera.urdf.xacro  jackal_lidar.urdf.xacro  jackal_ouster.urdf.xacro
launch/: bigbot_gazebo.launch  bigbot_multi_gazebo.launch  control.launch  description.launch  kf.launch  map.launch  multi_robot.launch  nav.launch  one_robot.launch  robot.launch
rviz/: multi_jackal.rviz  one_robot.rviz
src/: imuOdom.cpp  main.cpp  makeConstantCmd.cpp  turningControl.cpp  webot_cmd_vel_pub.cpp  webot_pose_sub.cpp
urdf/: jackal.gazebo  jackal.urdf.xacro
urdf/accessories/: alvartag_box.urdf.xacro  apriltag_box.urdf.xacro  apriltag_box_with_pole.urdf.xacro  bridge_plate.urdf.xacro  camera_mount.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  twocams.urdf.xacro
