<?xml version="1.0"?>
<package>
  <name>bigbot_base</name>
  <version>0.0.5</version>
  <description>Launch files and rviz configs for multi robot simulation.</description>
  <maintainer email="scsc1125@gmail.com">SeongChang Park</maintainer>
  <author     email="scsc1125@gmail.com">SeongChang Park</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>bigbot_control</run_depend>
  <run_depend>bigbot_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
</package>
